[gd_scene load_steps=34 format=3 uid="uid://fwuydtyw5y5"]

[ext_resource type="Script" uid="uid://duaj15r6cq78g" path="res://escenas/escena_principal/escena_principal.gd" id="1_pdctq"]
[ext_resource type="PackedScene" uid="uid://bijfajkuxnky4" path="res://escenas/nivel3x3/nivel3x3.tscn" id="2_snxy5"]
[ext_resource type="Texture2D" uid="uid://de81lo50ni10q" path="res://assets/imagenes/dia/fondo.png" id="3_y7kll"]
[ext_resource type="Texture2D" uid="uid://dl13jxnv47bif" path="res://assets/imagenes/noche/fondo_noche.png" id="4_px6n3"]
[ext_resource type="Theme" uid="uid://mpp7lp5rdwdw" path="res://escenas/menu_principal/tema_botones.tres" id="4_rrast"]
[ext_resource type="Texture2D" uid="uid://q4fq0q5o8pv2" path="res://assets/imagenes/botones/boton_logros_normal.png" id="5_otcpn"]
[ext_resource type="Texture2D" uid="uid://wy4ea7ehqrah" path="res://assets/imagenes/botones/es/inicio_normal.png" id="6_axhd6"]
[ext_resource type="Texture2D" uid="uid://dfdj5kwimadiv" path="res://assets/imagenes/botones/boton_logros_pressed.png" id="6_ctuc8"]
[ext_resource type="Texture2D" uid="uid://c0u5ydoxr7ikh" path="res://assets/imagenes/botones/es/inicio_pressed.png" id="7_kpj0l"]
[ext_resource type="Texture2D" uid="uid://cca2jojyl2te6" path="res://assets/imagenes/botones/boton_logros_hover.png" id="7_wwuot"]
[ext_resource type="Script" uid="uid://jd5a4ux1upqt" path="res://escenas/escena_principal/contenedor_texto.gd" id="8_asb8d"]
[ext_resource type="Texture2D" uid="uid://bcaupisn2thgi" path="res://assets/imagenes/botones/es/inicio_hover.png" id="8_q3xw2"]
[ext_resource type="Theme" uid="uid://s8hn1f0k01sq" path="res://escenas/menu_principal/tema_consejos.tres" id="9_ictn0"]
[ext_resource type="Texture2D" uid="uid://bwhdukgqni0wl" path="res://assets/imagenes/botones/es/cargar_normal.png" id="9_p60ft"]
[ext_resource type="Texture2D" uid="uid://ctludkacykch" path="res://assets/imagenes/botones/es/cargar_pressed.png" id="10_1ijcn"]
[ext_resource type="AudioStream" uid="uid://bekpwpvrl4jnw" path="res://assets/logro_1.wav" id="10_htiw2"]
[ext_resource type="PackedScene" uid="uid://bvlu32p8yf40e" path="res://escenas/controlador_partida/controlador_partida.tscn" id="10_pt7cf"]
[ext_resource type="Theme" uid="uid://dbqq473ipc3tm" path="res://escenas/menu_principal/tema_botones_logros.tres" id="10_sv3hn"]
[ext_resource type="Texture2D" uid="uid://dylmfjnqi4rlv" path="res://assets/imagenes/botones/es/cargar_hover.png" id="11_jn0hn"]
[ext_resource type="Texture2D" uid="uid://b0qqitw8l7ylu" path="res://assets/imagenes/botones/boton_noche_normal.png" id="11_q5o1b"]
[ext_resource type="Resource" uid="uid://dpt6irg5v7uly" path="res://recursos/datos_partida.tres" id="11_sv3hn"]
[ext_resource type="Texture2D" uid="uid://cvwyqxjnc7oa4" path="res://assets/imagenes/botones/es/salir_normal.png" id="12_4gqqi"]
[ext_resource type="Script" uid="uid://crgw3r2ilcq1v" path="res://escenas/BotonLogro/boton_logro.gd" id="12_fq8hg"]
[ext_resource type="Texture2D" uid="uid://dpdvf8y6o8isv" path="res://assets/imagenes/botones/boton_noche_pressed.png" id="12_fvqy1"]
[ext_resource type="Texture2D" uid="uid://bo0060r7ba1wt" path="res://assets/imagenes/botones/boton_noche_hover.png" id="13_26dec"]
[ext_resource type="Texture2D" uid="uid://bhuc2lqw1yyj5" path="res://assets/imagenes/botones/boton_cuadrado_normal.png" id="13_fra2k"]
[ext_resource type="Texture2D" uid="uid://qrl4u5hf045x" path="res://assets/imagenes/botones/es/salir_pressed.png" id="13_nutjc"]
[ext_resource type="Texture2D" uid="uid://c2dofrjep4ebb" path="res://assets/imagenes/botones/es/salir_hover.png" id="14_lp32y"]
[ext_resource type="Texture2D" uid="uid://bcyb0ueg0qhdd" path="res://assets/imagenes/botones/en_normal.png" id="14_m1n0g"]
[ext_resource type="Texture2D" uid="uid://bn51jsp2b2tlv" path="res://assets/imagenes/botones/boton_cuadrado_pressed.png" id="14_rsvwu"]
[ext_resource type="Texture2D" uid="uid://br545jfjkcfms" path="res://assets/imagenes/botones/en_pressed.png" id="15_126hc"]
[ext_resource type="Texture2D" uid="uid://i2vs304y0h3v" path="res://assets/imagenes/botones/boton_cuadrado_hover.png" id="15_p2mpa"]
[ext_resource type="Texture2D" uid="uid://dq7yll5ymgwkb" path="res://assets/imagenes/botones/en_hover.png" id="16_axhd6"]

[node name="EscenaPrincipal" type="Node2D"]
script = ExtResource("1_pdctq")
niveles = Array[PackedScene]([ExtResource("2_snxy5")])

[node name="Camera2D" type="Camera2D" parent="."]

[node name="FondoDia" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("3_y7kll")

[node name="FondoNoche" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
texture = ExtResource("4_px6n3")

[node name="MenuPrincipal" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -27.5
offset_top = -62.5
offset_right = 27.5
offset_bottom = 62.5
grow_horizontal = 2
grow_vertical = 2

[node name="Inicio" type="TextureButton" parent="MenuPrincipal"]
texture_filter = 1
layout_mode = 2
theme = ExtResource("4_rrast")
texture_normal = ExtResource("6_axhd6")
texture_pressed = ExtResource("7_kpj0l")
texture_hover = ExtResource("8_q3xw2")

[node name="Cargar" type="TextureButton" parent="MenuPrincipal"]
texture_filter = 1
layout_mode = 2
theme = ExtResource("4_rrast")
texture_normal = ExtResource("9_p60ft")
texture_pressed = ExtResource("10_1ijcn")
texture_hover = ExtResource("11_jn0hn")

[node name="Salir" type="TextureButton" parent="MenuPrincipal"]
texture_filter = 1
layout_mode = 2
theme = ExtResource("4_rrast")
texture_normal = ExtResource("12_4gqqi")
texture_pressed = ExtResource("13_nutjc")
texture_hover = ExtResource("14_lp32y")

[node name="OpcionesDeMenu" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 115.0
offset_top = -34.0
offset_right = 147.00005
offset_bottom = 34.0
grow_horizontal = 2
grow_vertical = 2

[node name="Dia" type="TextureButton" parent="OpcionesDeMenu"]
texture_filter = 1
layout_mode = 2
texture_normal = ExtResource("11_q5o1b")
texture_pressed = ExtResource("12_fvqy1")
texture_hover = ExtResource("13_26dec")

[node name="Logros" type="TextureButton" parent="OpcionesDeMenu"]
texture_filter = 1
layout_mode = 2
texture_normal = ExtResource("5_otcpn")
texture_pressed = ExtResource("6_ctuc8")
texture_hover = ExtResource("7_wwuot")

[node name="Idioma" type="TextureButton" parent="OpcionesDeMenu"]
texture_filter = 1
layout_mode = 2
texture_normal = ExtResource("14_m1n0g")
texture_pressed = ExtResource("15_126hc")
texture_hover = ExtResource("16_axhd6")

[node name="ContenedorTexto" type="CanvasLayer" parent="." node_paths=PackedStringArray("audio_logro")]
script = ExtResource("8_asb8d")
audio_logro = NodePath("AudioStreamPlayer2D")

[node name="ColorRect" type="ColorRect" parent="ContenedorTexto"]
modulate = Color(1, 1, 1, 0)
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.93100005
anchor_right = 0.5
anchor_bottom = 0.93100005
offset_left = -148.5
offset_top = -12.580017
offset_right = 148.5
offset_bottom = 12.419983
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0.50980395, 0.11372549, 0, 0.6627451)
metadata/_edit_use_anchors_ = true

[node name="Consejos" type="Label" parent="ContenedorTexto/ColorRect"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.5
offset_top = -11.5
offset_right = 0.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("9_ictn0")
text = "Consejo:"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
metadata/_edit_use_anchors_ = true

[node name="ColorRect2" type="ColorRect" parent="ContenedorTexto"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -148.5
offset_right = 148.5
offset_bottom = 25.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0.50980395, 1, 0, 0.6627451)
metadata/_edit_use_anchors_ = true

[node name="Logros" type="Label" parent="ContenedorTexto/ColorRect2"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 0
offset_right = 300.0
offset_bottom = 23.0
theme = ExtResource("9_ictn0")
text = "Ha completado"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
metadata/_edit_use_anchors_ = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="ContenedorTexto"]
stream = ExtResource("10_htiw2")

[node name="Logros" type="GridContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -290.0
offset_top = -62.0
offset_right = -210.0
offset_bottom = 59.0
grow_horizontal = 2
grow_vertical = 2
columns = 3

[node name="OHC" type="Button" parent="Logros"]
layout_mode = 2
theme = ExtResource("10_sv3hn")
text = "OHC"
script = ExtResource("12_fq8hg")
metadata/_custom_type_script = "uid://crgw3r2ilcq1v"

[node name="EHC" type="Button" parent="Logros"]
layout_mode = 2
theme = ExtResource("10_sv3hn")
text = "EHC"
script = ExtResource("12_fq8hg")
metadata/_custom_type_script = "uid://crgw3r2ilcq1v"

[node name="SHC" type="Button" parent="Logros"]
layout_mode = 2
theme = ExtResource("10_sv3hn")
text = "SHC"
script = ExtResource("12_fq8hg")
metadata/_custom_type_script = "uid://crgw3r2ilcq1v"

[node name="OHD" type="Button" parent="Logros"]
layout_mode = 2
theme = ExtResource("10_sv3hn")
text = "OHD"
script = ExtResource("12_fq8hg")
metadata/_custom_type_script = "uid://crgw3r2ilcq1v"

[node name="EHD" type="Button" parent="Logros"]
layout_mode = 2
theme = ExtResource("10_sv3hn")
text = "EHD"
script = ExtResource("12_fq8hg")
metadata/_custom_type_script = "uid://crgw3r2ilcq1v"

[node name="SHD" type="Button" parent="Logros"]
layout_mode = 2
theme = ExtResource("10_sv3hn")
text = "SHD"
script = ExtResource("12_fq8hg")
metadata/_custom_type_script = "uid://crgw3r2ilcq1v"

[node name="OVC" type="Button" parent="Logros"]
layout_mode = 2
theme = ExtResource("10_sv3hn")
text = "OVC"
script = ExtResource("12_fq8hg")
metadata/_custom_type_script = "uid://crgw3r2ilcq1v"

[node name="EAC" type="Button" parent="Logros"]
layout_mode = 2
theme = ExtResource("10_sv3hn")
text = "EAC"
script = ExtResource("12_fq8hg")
metadata/_custom_type_script = "uid://crgw3r2ilcq1v"

[node name="SVC" type="Button" parent="Logros"]
layout_mode = 2
theme = ExtResource("10_sv3hn")
text = "SVC"
script = ExtResource("12_fq8hg")
metadata/_custom_type_script = "uid://crgw3r2ilcq1v"

[node name="OVD" type="Button" parent="Logros"]
layout_mode = 2
theme = ExtResource("10_sv3hn")
text = "OVD"
script = ExtResource("12_fq8hg")
metadata/_custom_type_script = "uid://crgw3r2ilcq1v"

[node name="EAD" type="Button" parent="Logros"]
layout_mode = 2
theme = ExtResource("10_sv3hn")
text = "EAD"
script = ExtResource("12_fq8hg")
metadata/_custom_type_script = "uid://crgw3r2ilcq1v"

[node name="SVD" type="Button" parent="Logros"]
layout_mode = 2
theme = ExtResource("10_sv3hn")
text = "SVD"
script = ExtResource("12_fq8hg")
metadata/_custom_type_script = "uid://crgw3r2ilcq1v"

[node name="RegresarAlMenu" type="TextureButton" parent="."]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 115.0
offset_top = -72.0
offset_right = 147.0
offset_bottom = -37.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("10_sv3hn")
texture_normal = ExtResource("13_fra2k")
texture_pressed = ExtResource("14_rsvwu")
texture_hover = ExtResource("15_p2mpa")

[node name="ControladorPartida" parent="." instance=ExtResource("10_pt7cf")]
datos_partida = ExtResource("11_sv3hn")
